{{$NEXT}}

1.302003  2015-06-06 21:44:42-07:00 America/Los_Angeles

    - Documentation added
    - Make IPC::Files safe in cleanup

1.302002  2015-06-06 14:06:57-07:00 America/Los_Angeles

    - Fix Win32 support

1.302001  2015-06-05 22:40:57-07:00 America/Los_Angeles

    - Initial Version