@@ -34,6 +34,9 @@ Carp = 0
 Scalar::Util  = 1.13
 Test::Harness = 2.03
 
+[Prereqs / RuntimeSuggests]
+Test::Stream::XS = 1.302004
+
 [MakeMaker]
 [CPANFile]
 [MetaYAML]
