@@ -1,0 +1,9 @@
+#!/usr/bin/env perl -T
+use Test::Stream;
+
+plan(2);
+
+ok(1);
+ok(1);
+
+done_testing;
